force-app/main/default/objects/Programme__c/Programme__c.object-meta.xml
<CustomObject>
    <label>Programme and Event Participation</label>
    <nameField>
        <displayFormat>PEP-{00000}</displayFormat>
        <label>Programme  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programme and Event Participation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>