force-app/main/default/objects/Programme__c/fields/Average_Length_of_Each_Session__c.field-meta.xml
<CustomField>
    <fullName>Average_Length_of_Each_Session__c</fullName>
    <label>Average Length of Each Session (in mins)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>