force-app/main/default/objects/Programme__c/fields/Avg_No_of_Participants_at_Each_Session__c.field-meta.xml
<CustomField>
    <fullName>Avg_No_of_Participants_at_Each_Session__c</fullName>
    <label>Avg. No. of Participants at Each Session</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>