force-app/main/default/objects/Programme__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Programme_or_Event_Name__r.End_Date__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>