force-app/main/default/objects/Programme__c/fields/Lower_Age__c.field-meta.xml
<CustomField>
    <fullName>Lower_Age__c</fullName>
    <label>Lower Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>