force-app/main/default/objects/Programme__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>If you are entering programmes &apos;as you go&apos; you should use this box to help you identify one entry from the next, e.g. make a note of the date, location or staff involved.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>