force-app/main/default/objects/Programme__c/fields/Number_of_Programmes_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programmes_Delivered__c</fullName>
    <label>Number of Programmes Delivered</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>