force-app/main/default/objects/Programme__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Programme_or_Event_Name__r.Organisation__r.Name</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>