force-app/main/default/objects/Programme__c/fields/Organization_Delivered_To__c.field-meta.xml
<CustomField>
    <fullName>Organization_Delivered_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Delivered To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programme and Event Participation (Organization Delivered To)</relationshipLabel>
    <relationshipName>Programme_and_Event_Participation1</relationshipName>
    <type>Lookup</type>
</CustomField>