force-app/main/default/objects/Programme__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <formula>Programme_or_Event_Name__r.Organisation__c</formula>
    <label>Organization Id</label>
    <type>Text</type>
</CustomField>