force-app/main/default/objects/Programme__c/fields/Postcode_If_Location_is_Local__c.field-meta.xml
<CustomField>
    <fullName>Postcode_If_Location_is_Local__c</fullName>
    <label>Postcode(If Location is Local)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>