force-app/main/default/objects/Programme__c/fields/Programme_or_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_or_Event_Name__c</fullName>
    <label>Programme or Event Name</label>
    <referenceTo>Programme_and_Event_Data__c</referenceTo>
    <relationshipLabel>Programme and Event Participation</relationshipLabel>
    <relationshipName>Programme_and_Event_Participation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>