force-app/main/default/objects/Programme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Programme_or_Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>